# sweatpants

./: .gitignore  .homeboy.toml  CHANGELOG.md  CLAUDE.md  PKG-INFO  README.md  build.sh  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  api.md  cli.md  configuration.md  index.md
docs/engine/: job-scheduler.md  module-loader.md
docs/sdk/: browser.md  manifest.md  module.md  proxy.md
examples/hello-world/: main.py  module.json
skills/sweatpants/: SKILL.md
skills/sweatpants-module-creator/: SKILL.md
skills/sweatpants-module-creator/references/: examples.md
sweatpants/: __init__.py  __main__.py  cli.py  config.py  utils.py
sweatpants/api/: __init__.py  main.py  routes.py  scheduler.py
sweatpants/browser/: __init__.py  pool.py
sweatpants/engine/: __init__.py  job_scheduler.py  module_loader.py  state.py
sweatpants/proxy/: __init__.py  client.py
sweatpants/sdk/: __init__.py  module.py
tests/: __init__.py  test_config.py  test_dotenv_safety.py  test_proxy_client.py
